// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$t with no arguments 1`] = `
{
  "code": "$t();",
  "data": {
    "messages": [],
    "meta": {},
  },
}
`;

exports[`FormattedMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo.bar.baz",
      defaultMessage: "Hello World!"
    });
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": {},
  },
}
`;

exports[`GH #2663 1`] = `
{
  "code": ""use strict";

function _typeof(o) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (o) { return typeof o; } : function (o) { return o && "function" == typeof Symbol && o.constructor === Symbol && o !== Symbol.prototype ? "symbol" : typeof o; }, _typeof(o); }
function _regeneratorRuntime() { "use strict"; /*! regenerator-runtime -- Copyright (c) 2014-present, Facebook, Inc. -- license (MIT): https://github.com/facebook/regenerator/blob/main/LICENSE */ _regeneratorRuntime = function _regeneratorRuntime() { return e; }; var t, e = {}, r = Object.prototype, n = r.hasOwnProperty, o = Object.defineProperty || function (t, e, r) { t[e] = r.value; }, i = "function" == typeof Symbol ? Symbol : {}, a = i.iterator || "@@iterator", c = i.asyncIterator || "@@asyncIterator", u = i.toStringTag || "@@toStringTag"; function define(t, e, r) { return Object.defineProperty(t, e, { value: r, enumerable: !0, configurable: !0, writable: !0 }), t[e]; } try { define({}, ""); } catch (t) { define = function define(t, e, r) { return t[e] = r; }; } function wrap(t, e, r, n) { var i = e && e.prototype instanceof Generator ? e : Generator, a = Object.create(i.prototype), c = new Context(n || []); return o(a, "_invoke", { value: makeInvokeMethod(t, r, c) }), a; } function tryCatch(t, e, r) { try { return { type: "normal", arg: t.call(e, r) }; } catch (t) { return { type: "throw", arg: t }; } } e.wrap = wrap; var h = "suspendedStart", l = "suspendedYield", f = "executing", s = "completed", y = {}; function Generator() {} function GeneratorFunction() {} function GeneratorFunctionPrototype() {} var p = {}; define(p, a, function () { return this; }); var d = Object.getPrototypeOf, v = d && d(d(values([]))); v && v !== r && n.call(v, a) && (p = v); var g = GeneratorFunctionPrototype.prototype = Generator.prototype = Object.create(p); function defineIteratorMethods(t) { ["next", "throw", "return"].forEach(function (e) { define(t, e, function (t) { return this._invoke(e, t); }); }); } function AsyncIterator(t, e) { function invoke(r, o, i, a) { var c = tryCatch(t[r], t, o); if ("throw" !== c.type) { var u = c.arg, h = u.value; return h && "object" == _typeof(h) && n.call(h, "__await") ? e.resolve(h.__await).then(function (t) { invoke("next", t, i, a); }, function (t) { invoke("throw", t, i, a); }) : e.resolve(h).then(function (t) { u.value = t, i(u); }, function (t) { return invoke("throw", t, i, a); }); } a(c.arg); } var r; o(this, "_invoke", { value: function value(t, n) { function callInvokeWithMethodAndArg() { return new e(function (e, r) { invoke(t, n, e, r); }); } return r = r ? r.then(callInvokeWithMethodAndArg, callInvokeWithMethodAndArg) : callInvokeWithMethodAndArg(); } }); } function makeInvokeMethod(e, r, n) { var o = h; return function (i, a) { if (o === f) throw Error("Generator is already running"); if (o === s) { if ("throw" === i) throw a; return { value: t, done: !0 }; } for (n.method = i, n.arg = a;;) { var c = n.delegate; if (c) { var u = maybeInvokeDelegate(c, n); if (u) { if (u === y) continue; return u; } } if ("next" === n.method) n.sent = n._sent = n.arg;else if ("throw" === n.method) { if (o === h) throw o = s, n.arg; n.dispatchException(n.arg); } else "return" === n.method && n.abrupt("return", n.arg); o = f; var p = tryCatch(e, r, n); if ("normal" === p.type) { if (o = n.done ? s : l, p.arg === y) continue; return { value: p.arg, done: n.done }; } "throw" === p.type && (o = s, n.method = "throw", n.arg = p.arg); } }; } function maybeInvokeDelegate(e, r) { var n = r.method, o = e.iterator[n]; if (o === t) return r.delegate = null, "throw" === n && e.iterator["return"] && (r.method = "return", r.arg = t, maybeInvokeDelegate(e, r), "throw" === r.method) || "return" !== n && (r.method = "throw", r.arg = new TypeError("The iterator does not provide a '" + n + "' method")), y; var i = tryCatch(o, e.iterator, r.arg); if ("throw" === i.type) return r.method = "throw", r.arg = i.arg, r.delegate = null, y; var a = i.arg; return a ? a.done ? (r[e.resultName] = a.value, r.next = e.nextLoc, "return" !== r.method && (r.method = "next", r.arg = t), r.delegate = null, y) : a : (r.method = "throw", r.arg = new TypeError("iterator result is not an object"), r.delegate = null, y); } function pushTryEntry(t) { var e = { tryLoc: t[0] }; 1 in t && (e.catchLoc = t[1]), 2 in t && (e.finallyLoc = t[2], e.afterLoc = t[3]), this.tryEntries.push(e); } function resetTryEntry(t) { var e = t.completion || {}; e.type = "normal", delete e.arg, t.completion = e; } function Context(t) { this.tryEntries = [{ tryLoc: "root" }], t.forEach(pushTryEntry, this), this.reset(!0); } function values(e) { if (e || "" === e) { var r = e[a]; if (r) return r.call(e); if ("function" == typeof e.next) return e; if (!isNaN(e.length)) { var o = -1, i = function next() { for (; ++o < e.length;) if (n.call(e, o)) return next.value = e[o], next.done = !1, next; return next.value = t, next.done = !0, next; }; return i.next = i; } } throw new TypeError(_typeof(e) + " is not iterable"); } return GeneratorFunction.prototype = GeneratorFunctionPrototype, o(g, "constructor", { value: GeneratorFunctionPrototype, configurable: !0 }), o(GeneratorFunctionPrototype, "constructor", { value: GeneratorFunction, configurable: !0 }), GeneratorFunction.displayName = define(GeneratorFunctionPrototype, u, "GeneratorFunction"), e.isGeneratorFunction = function (t) { var e = "function" == typeof t && t.constructor; return !!e && (e === GeneratorFunction || "GeneratorFunction" === (e.displayName || e.name)); }, e.mark = function (t) { return Object.setPrototypeOf ? Object.setPrototypeOf(t, GeneratorFunctionPrototype) : (t.__proto__ = GeneratorFunctionPrototype, define(t, u, "GeneratorFunction")), t.prototype = Object.create(g), t; }, e.awrap = function (t) { return { __await: t }; }, defineIteratorMethods(AsyncIterator.prototype), define(AsyncIterator.prototype, c, function () { return this; }), e.AsyncIterator = AsyncIterator, e.async = function (t, r, n, o, i) { void 0 === i && (i = Promise); var a = new AsyncIterator(wrap(t, r, n, o), i); return e.isGeneratorFunction(r) ? a : a.next().then(function (t) { return t.done ? t.value : a.next(); }); }, defineIteratorMethods(g), define(g, u, "Generator"), define(g, a, function () { return this; }), define(g, "toString", function () { return "[object Generator]"; }), e.keys = function (t) { var e = Object(t), r = []; for (var n in e) r.push(n); return r.reverse(), function next() { for (; r.length;) { var t = r.pop(); if (t in e) return next.value = t, next.done = !1, next; } return next.done = !0, next; }; }, e.values = values, Context.prototype = { constructor: Context, reset: function reset(e) { if (this.prev = 0, this.next = 0, this.sent = this._sent = t, this.done = !1, this.delegate = null, this.method = "next", this.arg = t, this.tryEntries.forEach(resetTryEntry), !e) for (var r in this) "t" === r.charAt(0) && n.call(this, r) && !isNaN(+r.slice(1)) && (this[r] = t); }, stop: function stop() { this.done = !0; var t = this.tryEntries[0].completion; if ("throw" === t.type) throw t.arg; return this.rval; }, dispatchException: function dispatchException(e) { if (this.done) throw e; var r = this; function handle(n, o) { return a.type = "throw", a.arg = e, r.next = n, o && (r.method = "next", r.arg = t), !!o; } for (var o = this.tryEntries.length - 1; o >= 0; --o) { var i = this.tryEntries[o], a = i.completion; if ("root" === i.tryLoc) return handle("end"); if (i.tryLoc <= this.prev) { var c = n.call(i, "catchLoc"), u = n.call(i, "finallyLoc"); if (c && u) { if (this.prev < i.catchLoc) return handle(i.catchLoc, !0); if (this.prev < i.finallyLoc) return handle(i.finallyLoc); } else if (c) { if (this.prev < i.catchLoc) return handle(i.catchLoc, !0); } else { if (!u) throw Error("try statement without catch or finally"); if (this.prev < i.finallyLoc) return handle(i.finallyLoc); } } } }, abrupt: function abrupt(t, e) { for (var r = this.tryEntries.length - 1; r >= 0; --r) { var o = this.tryEntries[r]; if (o.tryLoc <= this.prev && n.call(o, "finallyLoc") && this.prev < o.finallyLoc) { var i = o; break; } } i && ("break" === t || "continue" === t) && i.tryLoc <= e && e <= i.finallyLoc && (i = null); var a = i ? i.completion : {}; return a.type = t, a.arg = e, i ? (this.method = "next", this.next = i.finallyLoc, y) : this.complete(a); }, complete: function complete(t, e) { if ("throw" === t.type) throw t.arg; return "break" === t.type || "continue" === t.type ? this.next = t.arg : "return" === t.type ? (this.rval = this.arg = t.arg, this.method = "return", this.next = "end") : "normal" === t.type && e && (this.next = e), y; }, finish: function finish(t) { for (var e = this.tryEntries.length - 1; e >= 0; --e) { var r = this.tryEntries[e]; if (r.finallyLoc === t) return this.complete(r.completion, r.afterLoc), resetTryEntry(r), y; } }, "catch": function _catch(t) { for (var e = this.tryEntries.length - 1; e >= 0; --e) { var r = this.tryEntries[e]; if (r.tryLoc === t) { var n = r.completion; if ("throw" === n.type) { var o = n.arg; resetTryEntry(r); } return o; } } throw Error("illegal catch attempt"); }, delegateYield: function delegateYield(e, r, n) { return this.delegate = { iterator: values(e), resultName: r, nextLoc: n }, "next" === this.method && (this.arg = t), y; } }, e; }
function asyncGeneratorStep(n, t, e, r, o, a, c) { try { var i = n[a](c), u = i.value; } catch (n) { return void e(n); } i.done ? t(u) : Promise.resolve(u).then(r, o); }
function _asyncToGenerator(n) { return function () { var t = this, e = arguments; return new Promise(function (r, o) { var a = n.apply(t, e); function _next(n) { asyncGeneratorStep(a, r, o, _next, _throw, "next", n); } function _throw(n) { asyncGeneratorStep(a, r, o, _next, _throw, "throw", n); } _next(void 0); }); }; }
function error1() {
  return _error.apply(this, arguments);
}
function _error() {
  _error = _asyncToGenerator(/*#__PURE__*/_regeneratorRuntime().mark(function _callee() {
    return _regeneratorRuntime().wrap(function _callee$(_context) {
      while (1) switch (_context.prev = _context.next) {
        case 0:
          _context.next = 2;
          return intl.formatMessage({
            id: "dI+HS6",
            defaultMessage: "foo"
          });
        case 2:
        case "end":
          return _context.stop();
      }
    }, _callee);
  }));
  return _error.apply(this, arguments);
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "foo",
        "description": "foo",
        "id": "dI+HS6",
      },
      {
        "defaultMessage": "foo",
        "description": undefined,
        "id": "dI+HS6",
      },
    ],
    "meta": {},
  },
}
`;

exports[`additionalComponentNames 1`] = `
{
  "code": "import React, { Component } from 'react';
function CustomMessage() {}
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement(CustomMessage, {
      id: "greeting-world",
      defaultMessage: "Hello World!"
    });
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "greeting-world",
      },
    ],
    "meta": {},
  },
}
`;

exports[`additionalFunctionNames 1`] = `
{
  "code": "// @react-intl project:foo
import React, { Component } from 'react';
function CustomMessage() {}
export default class Foo extends Component {
  render() {
    t({
      id: "mfl9RV",
      defaultMessage: "t"
    });
    return /*#__PURE__*/React.createElement(CustomMessage, {
      id: formatMessage({
        id: "9/u6bg",
        defaultMessage: "foo"
      }),
      description: $formatMessage({
        id: "3jMyCE",
        defaultMessage: "foo2"
      }),
      defaultMessage: "Hello World!"
    });
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "t",
        "description": undefined,
        "id": "mfl9RV",
      },
      {
        "defaultMessage": "foo",
        "description": undefined,
        "id": "9/u6bg",
      },
      {
        "defaultMessage": "foo2",
        "description": undefined,
        "id": "3jMyCE",
      },
    ],
    "meta": {
      "project": "foo",
    },
  },
}
`;

exports[`ast 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage, defineMessages } from 'react-intl';
defineMessage({
  id: "defineMessage",
  defaultMessage: [{
    "type": 0,
    "value": "this is a "
  }, {
    "type": 3,
    "value": "dt",
    "style": "full"
  }]
});
defineMessages({
  foo: {
    id: "defineMessages1",
    defaultMessage: [{
      "type": 0,
      "value": "this is a "
    }, {
      "type": 4,
      "value": "dt",
      "style": "full"
    }]
  },
  bar: {
    id: "defineMessages2",
    defaultMessage: [{
      "type": 0,
      "value": "this is a "
    }, {
      "type": 2,
      "value": "dt",
      "style": null
    }]
  },
  baz: {
    id: 'compiled',
    defaultMessage: [{
      type: 0,
      value: 'asd'
    }]
  }
});
export default class Foo extends Component {
  render() {
    Intl.formatMessage({
      id: "intl.formatMessage",
      defaultMessage: [{
        "type": 0,
        "value": "foo "
      }, {
        "type": 6,
        "value": "s",
        "options": {
          "one": {
            "value": [{
              "type": 0,
              "value": "1"
            }]
          },
          "other": {
            "value": [{
              "type": 0,
              "value": "2"
            }]
          }
        },
        "offset": 0,
        "pluralType": "cardinal"
      }]
    });
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo.bar.baz",
      defaultMessage: [{
        "type": 0,
        "value": "Hello World!"
      }]
    }), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "compiled2",
      defaultMessage: [{
        type: 0,
        value: 'compiled comp'
      }]
    }));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "this is a {dt, date, full}",
        "description": undefined,
        "id": "defineMessage",
      },
      {
        "defaultMessage": "this is a {dt, time, full}",
        "description": undefined,
        "id": "defineMessages1",
      },
      {
        "defaultMessage": "this is a {dt, number}",
        "description": undefined,
        "id": "defineMessages2",
      },
      {
        "defaultMessage": "foo {s, plural, one{1} other{2}}",
        "description": undefined,
        "id": "intl.formatMessage",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": undefined,
        "description": "The default message.",
        "id": "compiled2",
      },
    ],
    "meta": {},
  },
}
`;

exports[`defineMessage 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessage, FormattedMessage } from 'react-intl';
var msgs = {
  header: defineMessage({
    id: "foo.bar.baz",
    defaultMessage: "Hello World!"
  }),
  content: defineMessage({
    id: "foo.bar.biff",
    defaultMessage: "Hello Nurse!"
  }),
  kittens: defineMessage({
    id: "app.home.kittens",
    defaultMessage: "{count, plural, =0 {\\uD83D\\uDE2D} one {# kitten} other {# kittens}}"
  }),
  trailingWhitespace: defineMessage({
    id: "trailing.ws",
    defaultMessage: "Some whitespace"
  }),
  escaped: defineMessage({
    id: "escaped.apostrophe",
    defaultMessage: "A quoted value ''{value}'"
  }),
  stringKeys: defineMessage({
    // prettier-ignore
    'id': "string.key.id"
    // prettier-ignore
    ,

    // prettier-ignore
    'defaultMessage': "This is message"
  })
};
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.kittens)));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "Some whitespace",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
      {
        "defaultMessage": "This is message",
        "description": "Keys as a string literal",
        "id": "string.key.id",
      },
    ],
    "meta": {
      "project": "amazing",
    },
  },
}
`;

exports[`defineMessages 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
var msgs = defineMessages({
  header: {
    id: "foo.bar.baz",
    defaultMessage: "Hello World!"
  },
  content: {
    id: "foo.bar.biff",
    defaultMessage: "Hello Nurse!"
  },
  kittens: {
    id: "app.home.kittens",
    defaultMessage: "{count, plural, =0 {\\uD83D\\uDE2D} one {# kitten} other {# kittens}}"
  },
  trailingWhitespace: {
    id: "trailing.ws",
    defaultMessage: "Some whitespace"
  },
  escaped: {
    id: "escaped.apostrophe",
    defaultMessage: "A quoted value ''{value}'"
  }
});
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.kittens)));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "Some whitespace",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
    ],
    "meta": {
      "project": "amazing",
    },
  },
}
`;

exports[`descriptionsAsObjects 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';

// @react-intl project:amazing2
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo.bar.baz",
      defaultMessage: "Hello World!"
    });
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.baz",
      },
    ],
    "meta": {
      "project": "amazing2",
    },
  },
}
`;

exports[`empty 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement("div", null);
  }
}",
  "data": {
    "messages": [],
    "meta": {},
  },
}
`;

exports[`extractFromFormatMessageCall 1`] = `
{
  "code": "import { FormattedMessage, injectIntl } from 'react-intl';
import React, { Component } from 'react';
var objectPointer = {
  id: 'foo.bar.invalid',
  defaultMessage: 'This cannot be extracted',
  description: 'the plugin only supports inline objects'
};
class Foo extends Component {
  render() {
    var {
      intl
    } = this.props;
    var {
      intl: {
        formatMessage
      }
    } = this.props;
    var msgs = {
      baz: this.props.intl.formatMessage({
        id: "foo.bar.baz",
        defaultMessage: "Hello World!"
      }),
      biff: intl.formatMessage({
        id: "foo.bar.biff",
        defaultMessage: "Hello Nurse!"
      }),
      qux: formatMessage({
        id: "foo.bar.qux",
        defaultMessage: "Hello Stranger!"
      }),
      invalid: this.props.intl.formatMessage(objectPointer)
    };
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, msgs.header), /*#__PURE__*/React.createElement("p", null, msgs.content), /*#__PURE__*/React.createElement("span", null, /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo",
      defaultMessage: "bar"
    })));
  }
}
export default injectIntl(Foo);",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "Hello Stranger!",
        "description": "A different message",
        "id": "foo.bar.qux",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`extractFromFormatMessageCallStateless 1`] = `
{
  "code": "import { FormattedMessage, injectIntl, useIntl } from 'react-intl';
import React from 'react';
function myFunction(param1, _ref) {
  var {
    formatMessage,
    formatDate
  } = _ref;
  return formatMessage({
    id: "inline1",
    defaultMessage: "Hello params!"
  }) + formatDate(new Date());
}
var child = myFunction(filterable, intl);
function SFC() {
  var {
    formatMessage
  } = useIntl();
  return formatMessage({
    id: "hook",
    defaultMessage: "hook <b>foo</b>"
  });
}
var Foo = _ref2 => {
  var {
    intl: {
      formatMessage
    }
  } = _ref2;
  var msgs = {
    qux: formatMessage({
      id: "foo.bar.quux",
      defaultMessage: "Hello <b>Stateless!</b>"
    })
  };
  return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, msgs.header), /*#__PURE__*/React.createElement("p", null, msgs.content), /*#__PURE__*/React.createElement("span", null, /*#__PURE__*/React.createElement(FormattedMessage, {
    id: "foo",
    defaultMessage: "bar"
  })));
};
export default injectIntl(Foo);",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello params!",
        "description": "A stateless message",
        "id": "inline1",
      },
      {
        "defaultMessage": "hook <b>foo</b>",
        "description": "hook",
        "id": "hook",
      },
      {
        "defaultMessage": "Hello <b>Stateless!</b>",
        "description": "A stateless message",
        "id": "foo.bar.quux",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`extractSourceLocation 1`] = `
"import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo.bar.baz",
      defaultMessage: "Hello World!"
    });
  }
}"
`;

exports[`extractSourceLocation 2`] = `{}`;

exports[`formatMessageCall 1`] = `
{
  "code": "import React, { Component } from 'react';
import { injectIntl, FormattedMessage } from 'react-intl';
var objectPointer = {
  id: 'foo.bar.invalid',
  defaultMessage: 'This cannot be extracted',
  description: 'the plugin only supports inline objects'
};
class Foo extends Component {
  render() {
    var msgs = {
      baz: this.props.intl.formatMessage({
        id: "foo.bar.baz",
        defaultMessage: "Hello World!"
      }),
      biff: this.props.intl.formatMessage({
        id: "foo.bar.biff",
        defaultMessage: "Hello Nurse!"
      }),
      invalid: this.props.intl.formatMessage(objectPointer)
    };
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, msgs.header), /*#__PURE__*/React.createElement("p", null, msgs.content), /*#__PURE__*/React.createElement("span", null, /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo",
      defaultMessage: "bar"
    })));
  }
}
export default injectIntl(Foo);",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": {},
  },
}
`;

exports[`idInterpolationPattern 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
var msgs = defineMessages({
  header: {
    id: "fixtures.idInterpolationPattern.4d1460",
    defaultMessage: "Hello World!"
  },
  content: {
    id: "foo.bar.biff",
    defaultMessage: "Hello Nurse!"
  }
});
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "fixtures.idInterpolationPattern.36a8c8",
      defaultMessage: "Hello World!"
    }), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "fixtures.idInterpolationPattern.5ce864",
      defaultMessage: "NO ID"
    }));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "fixtures.idInterpolationPattern.4d1460",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "Something for the translator. Another description",
        "id": "fixtures.idInterpolationPattern.36a8c8",
      },
      {
        "defaultMessage": "NO ID",
        "description": "Something for the translator. Another description",
        "id": "fixtures.idInterpolationPattern.5ce864",
      },
    ],
    "meta": {},
  },
}
`;

exports[`idInterpolationPattern default 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
var msgs = defineMessages({
  header: {
    id: "TRRgnX",
    defaultMessage: "Hello World!"
  },
  content: {
    id: "foo.bar.biff",
    defaultMessage: "Hello Nurse!"
  }
});
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "NqjIBK",
      defaultMessage: "Hello World!"
    }), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "XOhkQy",
      defaultMessage: "NO ID"
    }));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "TRRgnX",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "Something for the translator. Another description",
        "id": "NqjIBK",
      },
      {
        "defaultMessage": "NO ID",
        "description": "Something for the translator. Another description",
        "id": "XOhkQy",
      },
    ],
    "meta": {},
  },
}
`;

exports[`inline 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo.bar.baz",
      defaultMessage: "Hello World!"
    }), defineMessage({
      id: "header",
      defaultMessage: "Hello World!"
    }), defineMessage({
      id: "header2",
      defaultMessage: "Hello World!"
    }));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "header",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "header2",
      },
    ],
    "meta": {},
  },
}
`;

exports[`jsxNestedInCallExpr 1`] = `
{
  "code": "import { useMemo } from 'react';
import { FormattedMessage, FormattedNumber, useIntl } from 'react-intl';
export default function IndexPage() {
  var intl = useIntl();
  var anotherMessage = useMemo(() => /*#__PURE__*/React.createElement(FormattedMessage, {
    id: "A+bpLt",
    defaultMessage: "Hello, World #1!"
  }), []);
  return /*#__PURE__*/React.createElement("main", {
    title: intl.formatMessage({
      id: "lyiQWH",
      defaultMessage: "Home"
    }),
    description: intl.formatMessage({
      id: "9CBSZS",
      defaultMessage: "An example app integrating React Intl with Next.js"
    })
  }, /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, {
    id: "wF8i0k",
    defaultMessage: "Hello, World #2!"
  })), /*#__PURE__*/React.createElement("p", null, anotherMessage), /*#__PURE__*/React.createElement("div", null, [...Array(10)].map((_, i) => /*#__PURE__*/React.createElement(FormattedMessage, {
    id: "rpH0bU",
    defaultMessage: "Hello, World #3!"
  }))), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedNumber, {
    value: 1000
  })));
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello, World #1!",
        "description": "Index Page: Content #1",
        "id": "A+bpLt",
      },
      {
        "defaultMessage": "Home",
        "description": "Index Page: document title",
        "id": "lyiQWH",
      },
      {
        "defaultMessage": "An example app integrating React Intl with Next.js",
        "description": "Index Page: Meta Description",
        "id": "9CBSZS",
      },
      {
        "defaultMessage": "Hello, World #2!",
        "description": "Index Page: Content #2",
        "id": "wF8i0k",
      },
      {
        "defaultMessage": "Hello, World #3!",
        "description": "Index Page: Content #3",
        "id": "rpH0bU",
      },
    ],
    "meta": {},
  },
}
`;

exports[`overrideIdFn 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
var msgs = defineMessages({
  header: {
    id: "overrideIdFn.js.foo.bar.baz.12.string",
    defaultMessage: "Hello World!"
  },
  content: {
    id: "overrideIdFn.js.foo.bar.biff.12.object",
    defaultMessage: "Hello Nurse!"
  }
});
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "overrideIdFn.js.foo.bar.zoo.12.object",
      defaultMessage: "Hello World!"
    }), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "overrideIdFn.js..5.object",
      defaultMessage: "NO ID"
    }));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "overrideIdFn.js.foo.bar.baz.12.string",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "overrideIdFn.js.foo.bar.biff.12.object",
      },
      {
        "defaultMessage": "Hello World!",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator. Another description",
        },
        "id": "overrideIdFn.js.foo.bar.zoo.12.object",
      },
      {
        "defaultMessage": "NO ID",
        "description": {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator. Another description",
        },
        "id": "overrideIdFn.js..5.object",
      },
    ],
    "meta": {},
  },
}
`;

exports[`preserveWhitespace 1`] = `
{
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
var msgs = defineMessages({
  header: {
    id: "foo.bar.baz",
    defaultMessage: "Hello World!"
  },
  content: {
    id: "foo.bar.biff",
    defaultMessage: "Hello Nurse!"
  },
  kittens: {
    id: "app.home.kittens",
    defaultMessage: "{count, plural, =0 {\\uD83D\\uDE2D} one {# kitten} other {# kittens}}"
  },
  trailingWhitespace: {
    id: "trailing.ws",
    defaultMessage: "   Some whitespace   "
  },
  escaped: {
    id: "escaped.apostrophe",
    defaultMessage: "A quoted value ''{value}'"
  },
  newline: {
    id: "newline",
    defaultMessage: "this is     a message"
  },
  linebreak: {
    id: "linebreak",
    defaultMessage: "this is\\na message"
  },
  templateLinebreak: {
    id: "templateLinebreak",
    defaultMessage: "this is\\n    a message"
  }
});
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement("div", null, /*#__PURE__*/React.createElement("h1", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.header)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.content)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, msgs.kittens)), /*#__PURE__*/React.createElement("p", null, /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "inline.linebreak",
      defaultMessage: "formatted message with linebreak"
    })));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      {
        "defaultMessage": "   Some whitespace   ",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
      {
        "defaultMessage": "this is     a message",
        "description": "this is     a     description",
        "id": "newline",
      },
      {
        "defaultMessage": "this is
a message",
        "description": "this is
a
description",
        "id": "linebreak",
      },
      {
        "defaultMessage": "this is
    a message",
        "description": "this is
    a
    description",
        "id": "templateLinebreak",
      },
      {
        "defaultMessage": "formatted message
						with linebreak",
        "description": "foo
						bar",
        "id": "inline.linebreak",
      },
    ],
    "meta": {
      "project": "amazing",
    },
  },
}
`;

exports[`removeDefaultMessage + overrideIdFn 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
defineMessages({
  foo: {
    id: "removeDefaultMessage.js.greeting-user.13.string"
  },
  foo2: {
    id: "removeDefaultMessage.js..8.string"
  },
  foo3: {
    id: "removeDefaultMessage.js..8.string"
  }
});
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "removeDefaultMessage.js.greeting-world.12.string"
    }), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "removeDefaultMessage.js..17.string"
    }), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "removeDefaultMessage.js..12.string"
    }));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello, {name}",
        "description": "Greeting the user",
        "id": "removeDefaultMessage.js.greeting-user.13.string",
      },
      {
        "defaultMessage": "foo2-msg",
        "description": "foo2",
        "id": "removeDefaultMessage.js..8.string",
      },
      {
        "defaultMessage": "foo3-msg",
        "description": undefined,
        "id": "removeDefaultMessage.js..8.string",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "removeDefaultMessage.js.greeting-world.12.string",
      },
      {
        "defaultMessage": "message with desc",
        "description": "desc with desc",
        "id": "removeDefaultMessage.js..17.string",
      },
      {
        "defaultMessage": "message only",
        "description": undefined,
        "id": "removeDefaultMessage.js..12.string",
      },
    ],
    "meta": {},
  },
}
`;

exports[`removeDefaultMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
defineMessages({
  foo: {
    id: "greeting-user"
  },
  foo2: {
    id: "xoMBqZ"
  },
  foo3: {
    id: "s0FUZ6"
  }
});
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "greeting-world"
    }), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "mdcDCs"
    }), /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "xjsqOM"
    }));
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "Hello, {name}",
        "description": "Greeting the user",
        "id": "greeting-user",
      },
      {
        "defaultMessage": "foo2-msg",
        "description": "foo2",
        "id": "xoMBqZ",
      },
      {
        "defaultMessage": "foo3-msg",
        "description": undefined,
        "id": "s0FUZ6",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "greeting-world",
      },
      {
        "defaultMessage": "message with desc",
        "description": "desc with desc",
        "id": "mdcDCs",
      },
      {
        "defaultMessage": "message only",
        "description": undefined,
        "id": "xjsqOM",
      },
    ],
    "meta": {},
  },
}
`;

exports[`skipExtractionFormattedMessage 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
function nonStaticId() {
  return 'baz';
}
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo.bar.".concat(nonStaticId())
    });
  }
}",
  "data": {
    "messages": [],
    "meta": {},
  },
}
`;

exports[`templateLiteral 1`] = `
{
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage } from 'react-intl';
defineMessage({
  id: "template",
  defaultMessage: "should remove newline and extra spaces"
});
export default class Foo extends Component {
  render() {
    return /*#__PURE__*/React.createElement(FormattedMessage, {
      id: "foo.bar.baz",
      defaultMessage: "Hello World!"
    });
  }
}",
  "data": {
    "messages": [
      {
        "defaultMessage": "should remove newline and extra spaces",
        "description": undefined,
        "id": "template",
      },
      {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": {},
  },
}
`;
